Make it possible to choose which is the favorite flatpak source

Includes controls to raise and lower the preference of the different
flatpak backends available.

BUG: 388921