libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h
@@ -32,8 +32,10 @@ extern "C" {
 class FlatpakResource;
 class FlatpakSourcesBackend : public AbstractSourcesBackend
 {
+Q_OBJECT
 public:
     explicit FlatpakSourcesBackend(const QVector<FlatpakInstallation *>& installations, AbstractResourcesBackend *parent);
+    ~FlatpakSourcesBackend() override;
 
     QAbstractItemModel* sources() override;
     bool addSource(const QString &id) override;
@@ -43,7 +45,13 @@ public:
     bool supportsAdding() const override { return true; }
 
     FlatpakRemote * installSource(FlatpakResource *resource);
+    bool canMoveSources() const override { return true; }
+
+    bool moveSource(const QString & sourceId, int delta) override;
+    int originIndex(const QString& sourceId) const;
+
 private:
+    QStandardItem* sourceById(const QString & sourceId) const;
     bool listRepositories(FlatpakInstallation *installation);
     void addRemote(FlatpakRemote *remote, FlatpakInstallation *installation);
 
